--- a/hw3/index.html
+++ b/hw3/index.html
@@ -281,12 +281,18 @@
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_1_banana.png" alt="2" class="center">
 			</div>
 			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task5/transition2.png" alt="2" class="center">
+			</div>
+			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_1_banana_rate.png" alt="2" class="center">
 			</div>
 		</div>
 		<div class="row">
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_2_banana.png" alt="2" class="center">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task5/transition2.png" alt="2" class="center">
 			</div>
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_2_banana_rate.png" alt="2" class="center">
@@ -298,12 +304,18 @@
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_3_banana.png" alt="2" class="center">
 			</div>
 			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task5/transition2.png" alt="2" class="center">
+			</div>
+			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_3_banana_rate.png" alt="2" class="center">
 			</div>
 		</div>
 		<div class="row">
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_4_banana.png" alt="2" class="center">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task5/transition2.png" alt="2" class="center">
 			</div>
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/extra_credit/adaptive_4_banana_rate.png" alt="2" class="center">
