--- a/hw4/index.html
+++ b/hw4/index.html
@@ -28,10 +28,14 @@
 		<br>
 		
 		<h3><b>Part 1: Masses And Springs </b></h3>
-		<p style="color: #DBDEE1; width: 100%">Placeholder</p>
+		<p style="color: #DBDEE1; width: 100%">First of all, here is our wireframe:</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task1/pinned2_no_shear.png" alt="0">
+		<p style="color: #DBDEE1; width: 100%">And now, with shear constraints only:</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task1/pinned2_only_shear.png" alt="0">
+		<p style="color: #DBDEE1; width: 100%">And finally, with all constraints:</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task1/pinned2_all.png" alt="0">
 		<br>
 		<br>
-		
 		
 		<h3><b>Part 2: Simulation Via Numerical Integration</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Placeholder</p>
