--- a/hw4/index.html
+++ b/hw4/index.html
@@ -39,6 +39,45 @@
 		
 		<h3><b>Part 2: Simulation Via Numerical Integration</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Placeholder</p>
+		<p style="color: #DBDEE1; width: 100%">Using the below images, describe the effects of changing the spring constant ks; how does the cloth behave from start to rest with a very low ks? A high ks? (Describe interesting differences, and also when they occur. Point out differences in the images.)</p>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/ks_low.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/ks_normal.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/ks_high.png" alt="0">
+			</div>
+		</div>
+		<p style="color: #DBDEE1; width: 100%">Describe the effects of changing the density now. (Describe interesting differences, and also when they occur. Point out differences in the images.)</p>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/density_low.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/density_normal.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/density_high.png" alt="0">
+			</div>
+		</div>
+		<p style="color: #DBDEE1; width: 100%">Describe the effects of changing the damping now. (Describe interesting differences, and also when they occur. Point out differences in the images.)</p>
+		<div class="row">
+  			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/damping_low.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/damping_normal.png" alt="0">
+			</div>
+			<div class="column">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/damping_high.png" alt="0">
+			</div>
+		</div>
+		<p style="color: #DBDEE1; width: 100%">Here is the shaded cloth in its final resting position. (Note to Sriram: If you chose to use different parameters than the default ones, please list them.)</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/pinned4.png" alt="0">
+		<br>
 		<br>
 		
 		<h3><b>Part 3: Handling Collisions with Other Objects</b></h3>
