--- a/hw4/index.html
+++ b/hw4/index.html
@@ -80,20 +80,21 @@
 		<br>
 		
 		<h3><b>Part 3: Handling Collisions with Other Objects</b></h3>
-		<p style="color: #DBDEE1; width: 100%">Placeholder</p>
+		<p style="color: #DBDEE1; width: 100%">Here is the shaded cloth with $ks$ values of 500, 5000, and 50000 respectively.</p>
 		<div class="row">
   			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task3/edl_hem_CBbunny.png" alt="0">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task3/sphere_ks_500.png" alt="0">
 			</div>
 			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task3/edl_hem_coil.png" alt="0">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task3/sphere_ks_5000.png" alt="0">
 			</div>
 			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task3/edl_hem_spheres.png" alt="0">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task3/sphere_ks_50000.png" alt="0">
 			</div>
 		</div>
-		<p style="color: #DBDEE1; width: 100%">Placeholder</p>
-		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/images/task3/light_comp_64_CBbunny.png" alt="2" class="center">
+		<p style="color: #DBDEE1; width: 100%">Sriram: (Describe the differences in the results.)</p>
+		<p style="color: #DBDEE1; width: 100%">Did you do what is below?</p>
+		<p style="color: #DBDEE1; width: 100%">Show us a screenshot of your shaded cloth lying peacefully at rest on the plane. If you haven't by now, feel free to express your colorful creativity with the cloth! (You will need to complete the shaders portion first to show custom colors.)</p>
 		<br>
 		<br>
 		
