--- a/hw4/index.html
+++ b/hw4/index.html
@@ -95,6 +95,7 @@
 		<p style="color: #DBDEE1; width: 100%">Sriram: (Describe the differences in the results.)</p>
 		<p style="color: #DBDEE1; width: 100%">Did you do what is below?</p>
 		<p style="color: #DBDEE1; width: 100%">Show us a screenshot of your shaded cloth lying peacefully at rest on the plane. If you haven't by now, feel free to express your colorful creativity with the cloth! (You will need to complete the shaders portion first to show custom colors.)</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task3/plane.png" alt="0">
 		<br>
 		<br>
 		
