--- a/hw4/index.html
+++ b/hw4/index.html
@@ -136,7 +136,7 @@
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task4/density_normal_3.png" alt="0">
 			</div>
-		</div>'
+		</div>
 		<p style="color: #DBDEE1; width: 100%">And, now, with a high density setting:</p>
 		<div class="row">
   			<div class="column">
